2017-05-05  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-fonts-noncjk.tex
	(tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/misc/SkakNew.htf):
	Support for chess figures.
	* tex4ht-4ht.tex (skak.4ht),
	* tex4ht-html (html4.4ht): added support for skak package 
	chessboards.
	* tex4ht-svg.tex (svg.4ht),
	* tex4ht-options.tex (tex4ht.4ht): introduced new option,
	`svg-inline`, which holds the original meaning of `svg` option.
	`svg` option now doesn't include the image in the document text.
	* tex4ht-info-svg.tex (infosvg.4ht): added information about 
	various svg options.


2017-05-04  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex (html4.4ht): round dimensions and remove 
	``pt'' units from image dimensions.
	* tex4ht-html4.tex (html4.4ht): Require horizontal stacking 
	of subfigures.

2017-05-03  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (usepackage.4ht): added basic support for
	xeCJK package, fixed one issue with biblatex.
	Details:  https://tex.stackexchange.com/a/367968/2891 

2017-04-28  Karl Berry  <karl@freefriends.org>

	* Makefile (common): include mktex4ht.4ht and tex4ht.sty.
	(common_no_cond_sty): new variable without either of those.
	(tex4ht_cond4ht_derived,tex4ht_sty_derived): use
	  $(common_no_cond_sty) instead of $(common). 
	(tex4ht_4ht_derived): depend on cond4ht.4ht.
	
	* mktex4ht-cnf.tex: copyright 2017.

2017-04-28  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex (html4.4ht): fixed error which happened when 
	xcolor haven't been loaded in the document. Fixed line widths.
	Start paragraph after mdframed environment.
	https://puszcza.gnu.org.ua/bugs/?217

2017-04-27  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex (html4.4ht): use CSS instead of rules="groups"
	attribute for vertical lines in tables.
	* tex4ht-4ht.tex (xcolor.4ht): new command \get:xcolorcss, for 
	conversion from xcolor color spec to CSS colors.
	* tex4ht-4ht.tex (mdframed.4ht),