@@ -30080,8 +30080,8 @@ of \''\:temp' below.
 
 \<skak.4ht\><<<
 % skak.4ht (|version), generated from |jobname.tex
-% Copyright |CopyYear.1997. Eitan M. Gurari
-|<TeX4ht copywrite|>
+% Copyright 2017 TeX Users Group
+|<TeX4ht license text|>
 
 |<skak.sty|>
 \Hinput{skak}
