@@ -46417,115 +46417,107 @@ dsrom 49 107
 \Section{SkakNew}
 
 \<skak-new\><<<
-SkakNew  32 121
-'' ''     32
-'!' ''     33
-'&#x201D;' ''     34
-'#' ''  35
-'$' ''  36
-'%' ''  37
-'&#x0026;' ''  38
-'&#x2019;' ''     39
-'&#x0028;' ''  40
-'&#x0029;' ''  41
-'*' ''  42
-'+' ''  43
-',' ''  44
-'-' ''  45
-'.' ''  46
-'/' ''     47
-'0' ''  48
-'1' ''  49
-'2' ''  50
-'3' ''  51
-'4' ''  52
-'5' ''  53
-'6' ''  54
-'7' ''  55
-'8' ''  56
-'9' ''  57
-':' ''  58
-';' ''  59
-'&#x00A1;' ''     60
-'=' ''  61
-'&#x00BF;' ''     62
-'?' ''  63
-'@' ''  64
-'&#x2192;' ''  65
-'&#x2657;' ''  66
-'&#x2191;' ''  67
-'&#x2299;' ''  68
-'&#x25B3;' ''  69
-'&#x25A1;' ''  70
-'&#x21D7;' ''  71
-'&#x21D4;' ''  72
-'&#x229e;' ''  73
-'&#x2573;' ''  74
-'&#x2654;' ''  75
-'&#x27c2;' ''  76
-'&#x226A;' ''  77
-'&#x2658;' ''  78
-'&#x226B;' ''  79
-'&#x2161;' ''  80
-'&#x2655;' ''  81
-'&#x2656;' ''  82
-'&#x003e;' ''  83
-'&#x2295;' ''  84
-'&#x25CB;' ''  85
-'&#x21C6;' ''  86
-'W' ''  87
-'&times;' ''  88
-'Y' ''  89
-'Z' ''  90
-'&#x005B;' ''  91
-'&#x201C;' ''     92
-'&#x005D;' ''  93
-'&#x02C6;' ''     94
-'&#x02D9;' ''     95
-'&#x2018;' ''     96
-'&#x29c9;' ''  97
-'&#x2313;' ''  98
-'&#x00b1;' ''  99
-'&#x2982;' ''  100
-'&#x2213;' ''  101
-'&#x2a72;' ''  102
-'&#x2a71;' ''  103
-'h' ''  I cannot find it, it is plus followed by minus
-'i' ''  minus followed by plus
-'&#x003d;' ''  106
-'k' ''  107
-'l' ''  108
-'#' ''  109
-'n' ''  110
-'o' ''  111
-'p' ''  112
-'q' ''  113
-'r' ''  114
-'s' ''  115
-'t' ''  116
-'u' ''  117
-'v' ''  118
-'w' ''  119
-'x' ''  120
-'y' ''  121
+SkakNew  32 121         `<version 0`>
+'' ''           32      % SkakNew.htf `version
+'!' ''          33      % Copyright 2017 TeX Users Group
+'&#x201D;' ''   34      % Released under LPPL 1.3c+.
+'#' ''          35      % See tex4ht-cpright.tex for license text.
+'$' ''          36
+'%' ''          37
+'&#x0026;' ''   38
+'&#x2019;' ''   39
+'&#x0028;' ''   40
+'&#x0029;' ''   41
+'*' ''          42
+'+' ''          43
+',' ''          44
+'-' ''          45
+'.' ''          46
+'/' ''          47
+'0' ''          48
+'1' ''          49
+'2' ''          50
+'3' ''          51
+'4' ''          52
+'5' ''          53
+'6' ''          54
+'7' ''          55
+'8' ''          56
+'9' ''          57
+':' ''          58
+';' ''          59
+'&#x00A1;' ''   60
+'=' ''          61
+'&#x00BF;' ''   62
+'?' ''          63
+'@' ''          64
+'&#x2192;' ''   65
+'&#x2657;' ''   66
+'&#x2191;' ''   67
+'&#x2299;' ''   68
+'&#x25B3;' ''   69
+'&#x25A1;' ''   70
+'&#x21D7;' ''   71
+'&#x21D4;' ''   72
+'&#x229e;' ''   73
+'&#x2573;' ''   74
+'&#x2654;' ''   75
+'&#x27c2;' ''   76
+'&#x226A;' ''   77
+'&#x2658;' ''   78
+'&#x226B;' ''   79
+'&#x2161;' ''   80
+'&#x2655;' ''   81
+'&#x2656;' ''   82
+'&#x003e;' ''   83
+'&#x2295;' ''   84
+'&#x25CB;' ''   85
+'&#x21C6;' ''   86
+'W' ''          87
+'&times;' ''    88
+'Y' ''          89
+'Z' ''          90
+'&#x005B;' ''   91
+'&#x201C;' ''   92
+'&#x005D;' ''   93
+'&#x02C6;' ''   94
+'&#x02D9;' ''   95
+'&#x2018;' ''   96
+'&#x29c9;' ''   97
+'&#x2313;' ''   98
+'&#x00b1;' ''   99
+'&#x2982;' ''   100
+'&#x2213;' ''   101
+'&#x2a72;' ''   102
+'&#x2a71;' ''   103
+'h' ''          % I cannot find it, it is plus followed by minus
+'i' ''          % minus followed by plus
+'&#x003d;' ''   106
+'k' ''          107
+'l' ''          108
+'#' ''          109
+'n' ''          110
+'o' ''          111
+'p' ''          112
+'q' ''          113
+'r' ''          114
+'s' ''          115
+'t' ''          116
+'u' ''          117
+'v' ''          118
+'w' ''          119
+'x' ''          120
+'y' ''          121
 SkakNew  32 121
 >>>
-
 \AddFont{skak-new}{unicode/misc/SkakNew}
 
 %%%%%%%%%%%%%%%%%%%%%%%%
 \Chapter{Etc}
-%%%%%%%%%%%%%%%%%%%%%%%%
 
-%%%%%%%%%%%%%%%%%%%%%%%%
 \Section{Vietnamese}
-%%%%%%%%%%%%%%%%%%%%%%%%
 
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%
 \Section{cmman.htf}
-%%%%%%%%%%%%%%%%%%%%%%%%
 
 \<cmman-uni\><<<
 cmman 12 111
