@@ -3,8 +3,8 @@
 %             or htlatex tex4ht-info-svg "html,sections+"
 %            or ht latex tex4ht-info
 %
-% Copyright (C) 2009-2010 TeX Users Group
-% Copyright (C) 2000-2009 Eitan M. Gurari
+% Copyright 2009-2017 TeX Users Group
+% Copyright 2000-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -27,8 +27,8 @@
 
 \<infosvg\><<<
 % infosvg.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009-2010 TeX Users Group
-% Copyright (C) |CopyYear.2000. Eitan M. Gurari
+% Copyright 2009-2017 TeX Users Group
+% Copyright |CopyYear.2000. Eitan M. Gurari
 |<TeX4ht copywrite|>
 {          \catcode`\@=0 \catcode`\\=11 @relax
   @gdef@infoIVht[#1]#2//{%
