@@ -2,8 +2,8 @@
 % compile 3 times: latex tex4ht-svg   
 %           or   xhlatex tex4ht-svg "html,3,sections+"
 %
-% Copyright (C) 2009-2016 TeX Users Group
-% Copyright (C) 2000-2009 Eitan M. Gurari
+% Copyright 2009-2017 TeX Users Group
+% Copyright 2000-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -25,9 +25,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \<svg\><<<
-% html4-svg.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009-2016 TeX Users Group
-% Copyright (C) |CopyYear.2001. Eitan M. Gurari
+% svg.4ht (|version), generated from |jobname.tex
+% Copyright 2009-2017 TeX Users Group
+% Copyright |CopyYear.2001. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
 
@@ -61,9 +61,9 @@
 
 
 \<configure html4-svg tex4ht\><<<    
-% svg.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009-2010 TeX Users Group
-% Copyright (C) |CopyYear.2001. Eitan M. Gurari
+% hmtl-svg.4ht (|version), generated from |jobname.tex
+% Copyright 2009-2017 TeX Users Group
+% Copyright |CopyYear.2001. Eitan M. Gurari
 |<TeX4ht copywrite|>
 \Configure{@DOCTYPE}
   {<!ENTITY \% misc "ins || del || script || noscript || svg">\Hnewline}
