@@ -1,3 +1,10 @@
+2017-05-09  Karl Berry  <karl@freefriends.org>
+
+	* tex4ht-info-svg.tex (infosvg.4ht),
+	tex4ht-svg.tex (svg.4ht),
+	tex4ht-fonts-noncjk.tex 
+	(tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/misc/SkakNew.htf): copyright.
+
 2017-05-05  Michal Hoftich  <michal.h21@gmail.com>
 
 	* tex4ht-fonts-noncjk.tex
@@ -6,13 +13,12 @@
 	* tex4ht-4ht.tex (skak.4ht),
 	* tex4ht-html (html4.4ht): added support for skak package 
 	chessboards.
-	* tex4ht-svg.tex (svg.4ht),
+	* tex4ht-svg.tex (svg.4ht, html4-svg.4ht),
 	* tex4ht-options.tex (tex4ht.4ht): introduced new option,
 	`svg-inline`, which holds the original meaning of `svg` option.
 	`svg` option now doesn't include the image in the document text.
 	* tex4ht-info-svg.tex (infosvg.4ht): added information about 
 	various svg options.
-
 
 2017-05-04  Michal Hoftich  <michal.h21@gmail.com>
 
